# Book_Storage

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
book_storage/account/: models.py  pipeline.py  services.py  tests.py  urls.py  views.py
book_storage/account/templates/account/: detail.html
book_storage/book_storage/: asgi.py  settings.py  urls.py  wsgi.py
book_storage/books/: admin.py  books_redis.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
book_storage/books/static/css/: style.css
book_storage/books/static/js/: script.js
book_storage/books/templates/: base.html
book_storage/books/templates/books/: detail.html  list.html
book_storage/books/templates/books/unit/: detail.html
book_storage/books/templates/books/unit/review/: create.html  detail.html
book_storage/books/templatetags/: books_tags.py
