[tool.poetry]
name = "book-storage"
version = "0.1.0"
description = ""
authors = ["MaximGit1 <allq137x@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "5.1"
black = "^24.8.0"
python-dotenv = "^1.0.1"
pillow = "^10.4.0"
markdown = "^3.7"
social-auth-app-django = "^5.4.2"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
